--- a/src/app/ingredient/ingredient-form/ingredient-form.component.html
+++ b/src/app/ingredient/ingredient-form/ingredient-form.component.html
@@ -6,20 +6,16 @@
         <input class="c-field"  type="text" formControlName="_id">
       </p>
       <p class="o-form-element">
-        <label class="c-label">First Name :</label>
+        <label class="c-label">Name :</label>
         <input class="c-field"  type="text" formControlName="name">
       </p>
       <p class="o-form-element">
-        <label class="c-label">Last Name :</label>
-        <input class="c-field"  type="text" formControlName="lastname">
+        <label class="c-label">Weight:</label>
+        <input class="c-field"  type="text" formControlName="weight">
       </p>
       <p class="o-form-element">
-        <label class="c-label">Phone :</label>
-        <input class="c-field"  type="text" formControlName="phone">
-      </p>
-      <p class="o-form-element">
-        <label class="c-label">Adress :</label>
-        <input class="c-field"  type="text" formControlName="adress">
+        <label class="c-label">Price : (en centimes)</label>
+        <input class="c-field" placeholder="ex: 1,60€ = 160 centimes" type="text" formControlName="price">
       </p>
       <button type="submit" class="c-button c-button--info c-button--block">Save</button>
     </form>
