--- a/src/app/pizza/details-pizza/details-pizza.component.html
+++ b/src/app/pizza/details-pizza/details-pizza.component.html
@@ -1,4 +1,64 @@
-<p>
-  details-pizza works! {{ pizza.name }}
-</p>
+<br>
+<div class="u-center-block c-card page-middle">
+  <div class="c-card__item">
+
+    <div class="o-grid o-grid--demo">
+      <div class="o-grid__cell o-grid__cell--width-40">
+        <div class="o-grid-text">
+          <img [src]="pizza.image">
+        </div>
+      </div>
+      <div class="o-grid__cell">
+        <div class="o-grid">
+          <div class="o-grid__cell">
+            <div class="o-grid-text">
+              <h2>{{ pizza.name }}</h2>
+            </div>
+          </div>
+          <div class="o-grid__cell">
+            <div class="o-grid-text">
+              <h3>{{ pizza.price }} €</h3>
+            </div>
+          </div>
+        </div>
+        <div class="o-grid">
+          <div class="o-grid__cell">
+            <div class="o-grid-text">
+              <p>{{ pizza.description }}</p>
+            </div>
+          </div>
+        </div>
+        <div class="o-grid">
+          <div class="o-grid__cell">
+            <div class="o-grid-text">
+              <p>Date de création : {{ pizza.cDate }}</p>
+            </div>
+          </div>
+        </div>
+        <div class="o-grid">
+          <div class="o-grid__cell">
+            <div class="o-grid-text">
+              <p>Date de modification : {{ pizza.mDate }}</p>
+            </div>
+          </div>
+        </div>
+        <div class="o-grid">
+          <div class="o-grid__cell">
+            <div class="o-grid-text">
+              <h3>Ingrédients : </h3>
+              <p *ngFor="let ingredient of ingredients">{{ ingredient }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+<button routerLink="/pizza/form/{{ pizza._id}}" class="c-button c-button--ghost-brand page-middle btn">Modifier la pizza</button>
+<button (click)="delete(pizza._id)" class="c-button c-button--ghost-error page-middle btn">Supprimer la pizza</button>
+
+
+
 
